--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 	<html>
 		<head>
-			
+			<link rel="stylesheet" type="text/css" href="ccs/style.css">
 		</head>
 		<body>
 			<h1>hi, im lindsey!</h1>
