--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 			<link rel="stylesheet" type="text/css" href="ccs/style.css">
 		</head>
 		<body>
+			<div class="navbar">
+				<ul class="nav navbar-nav">
+					<li><a href="home.html">home</a></li>
+					<li><a href="me.html">3 collumn</a></li>
+					<li><a href="gallery.html">gallery</a></li>
+				</ul>
+			</div>
 			<h1>hi, im lindsey!</h1>
 			<p>this is my github website</p>
 		</body>
