--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 			</div>
 			<h1>hi, im lindsey!</h1>
 			<p>this is my github website</p>
+			<p> this finishes the website!:D </p>
 		</body>
 	</html>
