--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 			<h1>hi, im lindsey!</h1>
 			<p>this is my github website</p>
 			<p> this finishes the website!:D </p>
+			<img src="img/valhalla3.jpg">
 		</body>
 	</html>
